tests/transpiler/x/hs/math_ops.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/math_ops.hs:6:14: error:
    Variable not in scope: (%) :: t0 -> t1 -> a2
  |
6 |     print (7 % 2)
  |              ^
