tests/transpiler/x/hs/math_ops.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 17:43:12 GMT+7
main :: IO ()
main = do
    print (6 * 7)
    print (7 / 2)
    print (7 % 2)
